namespaces/live.cloud-platform.service.justice.gov.uk/token-verification-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: token-verification-api-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    cloud-platform.justice.gov.uk/namespace: "token-verification-api-dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "token-verification-api-dev"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/token-verification-api.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/team-name: "dps-tech-team"
